# tinyserve

./: .gitignore  Dockerfile.bench  README.md  pyproject.toml
benchmarks/: NOTE.md  all_paths_comparison_20260404.txt  all_perf_20260326.txt  batched_prefill_20260326.txt  buddy_bench_20260331.json  buddy_bench_20260331.txt  buddy_calibration_20260331.txt  buddy_tables_gptoss20b.json  cache_bias_sweep_20260331.json  cache_bias_sweep_20260331.txt  cpu_slotmap_bench_20260331.json  cpu_slotmap_bench_20260331.txt  debug_bench_20260325.txt  debug_bench_zerodedup_20260325.txt  disk_offload_bench_20260325.txt  dynamic_rebalance_20260331.txt  flex_bench_20260325.txt  gptoss20b_fp8kv.json  gptoss20b_fp8kv.txt  gptoss20b_fp8kv_v2.json  gptoss20b_fp8kv_v2.txt  gptoss20b_mxfp4_fp8kv.txt  headwise_kv_trigger_20260403.txt  long_context_eager_20260322.txt  manual_layer_test_20260404.txt  miss_penalty_20260331.json  miss_penalty_20260331.txt  profile_20260404.txt  qwen_122b_test_20260331.txt  sage_chunked_20260326.txt  sliding_kv_fix_20260403.txt  streaming_llm_20260403.txt  tinyserve_only_profile_20260404.txt
docs/: architecture.md
notes/: llama_cpp_rfc_draft.md  quant_format_plan.md  throughput_roadmap.md  throughput_roadmap_v2.md
scripts/: autotune.py  bench_attention.py  bench_context.py  bench_disk_offload.py  bench_flex_only.py  bench_kv_configs.py  bench_long_context.py  bench_qwen35.py  bench_with_buddies.py  benchmark.py  cache_benchmark.py  calibrate_buddies.py  comprehensive_bench.py  debug_bench.py  expert_similarity.py  prompts.py  sweep_cache_bias.py  test_qwen_122b.py  (+1 more)
(+96 files in other folders)
